--- a/templates/home.html
+++ b/templates/home.html
@@ -31,9 +31,9 @@
                     <div class="card-body">
                         {{ task.task }}
                         <span style="position: relative; float: right;">
-                            <a class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
+                            <a class="btn btn-success" href="{% url 'markAsDone' task.pk %}"><i class="fa fa-check"></i> Mark as Done</a>
                             <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
-                            <a class="btn btn-primary"><i class="fa fa-pencil"></i></a>
+                            <a class="btn btn-primary" href="{% url 'editTask' task.pk %}"><i class="fa fa-pencil"></i></a>
                         </span>
                     </div>
                 </div>
@@ -43,11 +43,16 @@
             <div class="col-md-5 col-lg-5">
                 <h5>Completed Tasks</h5>
                 <!-- List of all the tasks that have completed -->
-                <div class="card m-1">
-                    <div class="card-body">
-                        This is the completed task.
-                    </div>
-                </div>
+                {% for task in completed_tasks %}
+                    <div class="card m-1">
+                        <div class="card-body">                       
+                            {{task.task}}
+                            <span style="position: relative; float: right;">
+                                <a class="btn btn-danger" href="{% url 'markAsUndone' task.pk %}"><i class="fa fa-remove"></i> Mark as Undone</a>
+                            </span>
+                        </div>
+                    </div>                
+                {% endfor %}
             </div>
         </div>
         <div class="row">
